<resources>
    <string name="app_name">BookStats</string>
    <string name="nav_library">My Library</string>
    <string name="nav_goals">Goals</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_achievements">Achievements</string>

    //Library
    <string name="current_streak">Current streak</string>
    <string name="last_read">Last read</string>
    <string name="streak_icon">Streak icon</string>
    <string name="current_streak_value">%d% days</string>

    //Book creation
    <string name="book_name">Book name</string>
    <string name="book_author">Book author</string>
    <string name="book_pages">Number of pages</string>
    <string name="book_save">Save book</string>
    <string name="book_desc_image">Image of the book</string>
    <string name="creation_error_author">Please enter the book author.</string>
    <string name="creation_error_name">Please enter the book name.</string>
    <string name="creation_error_pages">Please enter the number of pages.</string>
    <string name="creation_error_image">Please upload the image of the book</string>
    <string name="unknown_error">Something went wrong…</string>
    <string name="current_page">Current page</string>
    <string name="session_date">Session date</string>
    <string name="reading_time">Reading time</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="add">Add</string>
    <string name="add_session">Add session</string>
    <string name="scan_isbn">Scan ISBN code</string>

    //book details
    <string name="reading_percentage">Reading percentage</string>
    <string name="delete_book">Delete book</string>
    <string name="add_session_button">Add session</string>
    <string name="book_successfully_deleted">Book successfully deleted!</string>
    //general tab
    <string name="avg_read_time">Avg: read time</string>
    <string name="pages_h">pages/h</string>
    <string name="min_page">min/page</string>
    <string name="avg_total_read_time">Total read time</string>
    <string name="continue_reading">Continue reading!</string>
    <string name="click_to_add_reading_session">Click here to start reading session</string>
    <string name="current_page_text">Current page: %1$s / %2$s</string>

    //sessions tab
    <string name="settings">settings</string>
    <string name="read_time">Read time</string>
    <string name="pages_read">Pages read</string>
    <string name="book_percentage">%d%%</string>

    //Real-time session
    <string name="back_button">Back button</string>
    <string name="hours_capital">HOURS</string>
    <string name="minutes_capital">MINUTES</string>
    <string name="seconds_capital">SECONDS</string>
    <string name="pause_session">Pause session</string>
    <string name="resume_session">Resume session</string>
    <string name="end_session">End session</string>
    <string name="save">Save</string>
    <string name="current_page_in_this_session">Type the page you stopped reading on</string>
    <string name="page_is_too_high">Current page is higher than book total pages</string>
    <string name="page_must_be_higher">Current page must be higher than %s</string>
    <string name="session">Session</string>
    <string name="session_in_progress">Session in progress… Focus on reading book.</string>
    <string name="session_ended">Session ended!</string>
    <string name="finish_summary">Finish the summary</string>

    <string name="temp">temp</string>
    <string name="first_page">First page number</string>
    <string name="_0">0</string>
    <string name="edit_book">Edit book</string>
    <string name="click_to_edit_book">Click here to edit the book!</string>
    <string name="add_session_manually">Click here to manually add a session</string>
    <string name="delete_book_description">Click here to delete this book.
        You cannot undo that!</string>
</resources>