<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_current_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_page" />

    <EditText
        android:id="@+id/edit_text_current_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_page"
        android:inputType="number"
        android:autofillHints="@string_current_page"
        />

    <TextView
        android:id="@+id/text_view_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_date" />

    <EditText
        android:id="@+id/session_date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/session_date"
        android:inputType="none"
        tools:ignore="TextFields" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_view_reading_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reading_time" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hours"
            app:layout_constraintLeft_toLeftOf="@id/edit_text_hour"
            app:layout_constraintRight_toRightOf="@id/edit_text_hour"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:focusable="false"
            android:hint="@string/hours"
            android:inputType="none"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/edit_text_minutes"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/hours_number_picker"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/edit_text_hour"
            app:layout_constraintRight_toRightOf="@id/edit_text_hour"
            app:layout_constraintTop_toTopOf="@id/edit_text_hour"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/minutes"
            app:layout_constraintLeft_toLeftOf="@id/edit_text_minutes"
            app:layout_constraintRight_toRightOf="@id/edit_text_minutes"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:focusable="false"
            android:hint="@string/minutes"
            android:inputType="none"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@id/edit_text_hour"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/minutes_number_picker"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/edit_text_minutes"
            app:layout_constraintRight_toRightOf="@id/edit_text_minutes"
            app:layout_constraintTop_toTopOf="@id/edit_text_minutes"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>